src/messages/MMDSOp.h
@@ -1,0 +1,10 @@
+#pragma once
+
+#include "msg/Message.h"
+
+class MMDSOp: public SafeMessage {
+public:
+  template<typename... Types>
+  MMDSOp(Types&&... args)
+    : SafeMessage(std::forward<Types>(args)...) {}
+};
